fixed the focus:visible issue for the caret icon in the contact dropdown but changing position to relative from absolute

--- a/css/contact.css
+++ b/css/contact.css
@@ -73,11 +73,10 @@
 }
 
 .contact-hours-caret {
-  position: absolute;
-  top: 50%; 
-  transform: translateY(-50%); 
-  left: 100%; 
-  margin-left: 5px; 
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 5px;
 }
 
 .contact-day-bold {
